[gd_scene load_steps=10 format=2]

[ext_resource path="res://World/Paddle.gd" type="Script" id=1]
[ext_resource path="res://World/puudle.gd" type="Script" id=2]
[ext_resource path="res://Reso/PNG/Decor_Items/Puddle_02.png" type="Texture" id=3]
[ext_resource path="res://Reso/PNG/Decor_Items/Puddle_03.png" type="Texture" id=4]
[ext_resource path="res://Reso/PNG/Decor_Items/Puddle_06.png" type="Texture" id=5]
[ext_resource path="res://Reso/PNG/Decor_Items/Puddle_01.png" type="Texture" id=6]
[ext_resource path="res://Reso/PNG/Decor_Items/Puddle_04.png" type="Texture" id=7]
[ext_resource path="res://Sounds/329606__inspectorj__footsteps-puddles-d.wav" type="AudioStream" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 64.7321
height = 71.0414

[node name="Paddle" type="StaticBody2D"]
z_index = 1
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 6
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( 10.2773, 19.7236 )
scale = Vector2( 1.27038, 1.27038 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="Area2D"]
position = Vector2( 15.026, 17.1474 )
scale = Vector2( 1.24997, 1.16711 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="Area2D"]
position = Vector2( 12.0208, 14.1421 )
scale = Vector2( 1.4088, 1.25688 )
texture = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="Area2D"]
position = Vector2( 10.0864, 19.5188 )
scale = Vector2( 1.31082, 1.26939 )
texture = ExtResource( 7 )

[node name="Sprite5" type="Sprite" parent="Area2D"]
position = Vector2( 6.62882, 16.8818 )
scale = Vector2( 1.30867, 1.27 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 10.493, 17.684 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Area2D"]
stream = ExtResource( 8 )
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
